<resources>
    <string name="app_name">Demon\'s Souls App</string>
    <string name="augite_of_guidance">Augite of Guidance</string>
    <string name="archstone_shard">Archstone Shard</string>
    <string name="bearbug_grains">Bearbug Grains</string>
    <string name="black_pine_resin">Black Pine Resin</string>
    <string name="brass_telescope">Brass Telescope</string>
    <string name="ceramic_coin">Ceramic Coin</string>
    <string name="crescent_moon_grass">Crescent Moon Grass</string>
    <string name="half_moon_grass">Half Moon Grass</string>
    <string name="late_moon_grass">Late Moon Grass</string>
    <string name="full_moon_grass">Full Moon Grass</string>
    <string name="new_moon_grass">New Moon Grass</string>
    <string name="dark_moon_grass">Dark Moon Grass</string>
    <string name="fresh_spice">Fresh Spice</string>
    <string name="aged_spice">Aged Spice</string>
    <string name="ed_s_sharpening_stone">Ed\'s Sharpening Stone</string>
    <string name="phosphorescent_grains">Phosphorescent Grains</string>
    <string name="preservation_grains">Preservation Grains</string>
    <string name="noble_s_lotus">Noble\'s Lotus</string>
    <string name="soldier_s_lotus">Soldier\'s Lotus</string>
    <string name="soul_remains">Soul Remains</string>
    <string name="sticky_white_slime">Sticky White Slime</string>
    <string name="stone_of_ephemeral_eyes">Stone of Ephemeral Eyes</string>
    <string name="pine_resin">Pine Resin</string>
    <string name="widow_s_lotus">Widow\'s Lotus</string>
    <string name="bright_water">Bright Water</string>
    <string name="elixir">Elixir</string>
    <string name="grass_jelly">Grass Jelly</string>
    <string name="cracked_eye_stone">Cracked Eye Stone</string>
    <string name="gold_coin">Gold Coin</string>
    <string name="black_eye_stone">Black Eye Stone</string>
    <string name="blue_eye_stone">Blue Eye Stone</string>
    <string name="red_eye_stone">Red Eye Stone</string>
    <string name="white_eye_stone">White Eye Stone</string>
    <string name="firebomb">Firebomb</string>
    <string name="kunai">Kunai</string>
    <string name="stealth_throwing_dagger">Stealth Throwing Dagger</string>
    <string name="throwing_knife">Throwing Knife</string>
    <string name="legendary_hero_soul">Legendary Hero Soul</string>
    <string name="legendary_warrior_soul">Legendary Warrior Soul</string>
    <string name="renowned_hero_soul">Renowned Hero Soul</string>
    <string name="renowned_warrior_soul">Renowned Warrior Soul</string>
    <string name="storied_hero_soul">Storied Hero Soul</string>
    <string name="storied_warrior_soul">Storied Warrior Soul</string>
    <string name="unknown_hero_soul">Unknown Hero Soul</string>
    <string name="unknown_warrior_soul">Unknown Warrior Soul</string>
    <string name="classes">Classes</string>
    <string name="character_tendency">Character Tendency</string>
    <string name="status_effects">Status Effects</string>
    <string name="knight">Knight</string>
    <string name="priest">Priest</string>
    <string name="thief">Thief</string>
    <string name="magician">Magician</string>
    <string name="temple_knight">Temple Knight</string>
    <string name="soldier">Soldier</string>
    <string name="wanderer">Wanderer</string>
    <string name="barbarian">Barbarian</string>
    <string name="royalty">Royalty</string>
    <string name="hunter">Hunter</string>
    <string name="spells">Spells</string>
    <string name="shields">Shields</string>
    <string name="weapons">Weapons</string>
    <string name="armor">Armor</string>
    <string name="rings">Rings</string>
    <string name="items">Items</string>
    <string name="key_items">Key Items</string>
    <string name="materials">Materials</string>
    <string name="ammo">Ammo</string>
    <string name="magic_spells">Magic Spells</string>
    <string name="miracles">Miracles</string>
    <string name="acid_cloud">Acid Cloud</string>
    <string name="cloak">Cloak</string>
    <string name="curse_weapon">Curse Weapon</string>
    <string name="death_cloud">Death Cloud</string>
    <string name="enchant_weapon">Enchant Weapon</string>
    <string name="familiar_s_prank">Familiar\'s Prank</string>
    <string name="fireball">Fireball</string>
    <string name="fire_spray">Fire Spray</string>
    <string name="firestorm">Firestorm</string>
    <string name="flame_toss">Flame Toss</string>
    <string name="homing_soul_arrow">Homing Soul Arrow</string>
    <string name="ignite">Ignite</string>
    <string name="light_weapon">Light Weapon</string>
    <string name="poison_cloud">Poison Cloud</string>
    <string name="protection">Protection</string>
    <string name="relief">Relief</string>
    <string name="soul_arrow">Soul Arrow</string>
    <string name="Soul_Ray">Soul Ray</string>
    <string name="soulsucker">Soulsucker</string>
    <string name="soul_thirst">Soul Thirst</string>
    <string name="warding">Warding</string>
    <string name="water_veil">Water Veil</string>
    <string name="antidote">Antidote</string>
    <string name="anti_magic_field">Anti-Magic Field</string>
    <string name="banish">Banish</string>
    <string name="cure">Cure</string>
    <string name="evacuate">Evacuate</string>
    <string name="god_s_wrath">God\'s Wrath</string>
    <string name="heal">Heal</string>
    <string name="hidden_soul">Hidden Soul</string>
    <string name="recovery">Recovery</string>
    <string name="regeneration">Regeneration</string>
    <string name="resurrection">Resurrection</string>
    <string name="second_chance">Second Chance</string>
    <string name="small_shields">Small Shields</string>
    <string name="standard_shields">Standard Shields</string>
    <string name="large_shields">Large Shields</string>
    <string name="buckler">Buckler</string>
    <string name="leather_shield">Leather Shield</string>
    <string name="rune_shield">Rune Shield</string>
    <string name="dregling_shield">Dregling Shield</string>
    <string name="soldier_s_shield">Soldier\'s Shield</string>
    <string name="wooden_shield">Wooden Shield</string>
    <string name="dark_silver_shield">Dark Silver Shield</string>
    <string name="heater_shield">Heater Shield</string>
    <string name="kite_shield">Kite Shield</string>
    <string name="knight_s_shield">Knight\'s Shield</string>
    <string name="spiked_shield">Spiked Shield</string>
    <string name="hoplite_shield">Hoplite Shield</string>
    <string name="adjudicator_s_shield">Adjudicator\'s Shield</string>
    <string name="large_brushwood_shield">Large Brushwood Shield</string>
    <string name="purple_flame_shield">Purple Flame Shield</string>
    <string name="steel_shield">Steel Shield</string>
    <string name="tower_shield">Tower Shield</string>
    <string name="daggers">Daggers</string>
    <string name="straight_swords">Straight Swords</string>
    <string name="large_swords">Large Swords</string>
    <string name="very_large_swords">Very Large Swords</string>
    <string name="curved_swords">Curved Swords</string>
    <string name="katanas">Katanas</string>
    <string name="thrusting_swords">Thrusting Swords</string>
    <string name="axes">Axes</string>
    <string name="large_axes">Large Axes</string>
    <string name="ham_mers">Ham mers</string>
    <string name="large_hammers">Large Hammers</string>
    <string name="hammers">Hammers</string>
    <string name="fist_weapons">Fist Weapons</string>
    <string name="spears">Spears</string>
    <string name="polearms">Polearms</string>
    <string name="bows">Bows</string>
    <string name="crossbows">Crossbows</string>
    <string name="catalysts">Catalysts</string>
    <string name="talismans">Talismans</string>
    <string name="dagger">Dagger</string>
    <string name="parry_dagger">Parry Dagger</string>
    <string name="secret_dagger">Secret Dagger</string>
    <string name="baby_s_nail">Baby\'s Nail</string>
    <string name="blueblood_sword">Blueblood Sword</string>
    <string name="broad_sword">Broad Sword</string>
    <string name="broken_sword">Broken Sword</string>
    <string name="long_sword">Long Sword</string>
    <string name="knight_sword">Knight Sword</string>
    <string name="kris_blade">Kris Blade</string>
    <string name="penetrating_sword">Penetrating Sword</string>
    <string name="rune_sword">Rune Sword</string>
    <string name="short_sword">Short Sword</string>
    <string name="bastard_sword">Bastard Sword</string>
    <string name="claymore">Claymore</string>
    <string name="demonbrandt">Demonbrandt</string>
    <string name="flamberge">Flamberge</string>
    <string name="large_sword_of_moonlight">Large Sword of Moonlight</string>
    <string name="northern_regalia">Northern Regalia</string>
    <string name="morion_blade">Morion Blade</string>
    <string name="soulbrandt">Soulbrandt</string>
    <string name="storm_ruler">Storm Ruler</string>
    <string name="dragon_bone_smasher">Dragon Bone Smasher</string>
    <string name="great_sword">Great Sword</string>
    <string name="blind">Blind</string>
    <string name="falchion">Falchion</string>
    <string name="kilij">Kilij</string>
    <string name="large_sword_of_searching">Large Sword of Searching</string>
    <string name="scimitar">Scimitar</string>
    <string name="shotel">Shotel</string>
    <string name="hiltless">Hiltless</string>
    <string name="magic_sword_quot_makoto_quot">Magic Sword \"Makoto\"</string>
    <string name="uchigatana">Uchigatana</string>
    <string name="epee_rapier">Epee Rapier</string>
    <string name="estoc">Estoc</string>
    <string name="gen_s_stiletto">Gen\'s Stiletto</string>
    <string name="needle_of_eternal_agony">Needle of Eternal Agony</string>
    <string name="mail_breaker">Mail Breaker</string>
    <string name="rapier">Rapier</string>
    <string name="cat_ring">Cat Ring</string>
    <string name="clever_rat_s_ring">Clever Rat\'s Ring</string>
    <string name="cling_ring">Cling Ring</string>
    <string name="dull_rat_s_ring">Dull Rat\'s Ring</string>
    <string name="eternal_warrior_s_ring">Eternal Warrior\'s Ring</string>
    <string name="foe_s_ring">Foe\'s Ring</string>
    <string name="fragrant_ring">Fragrant Ring</string>
    <string name="graverobber_s_ring">Graverobber\'s Ring</string>
    <string name="master_s_ring">Master\'s Ring</string>
    <string name="regenerator_s_ring">Regenerator\'s Ring</string>
    <string name="ring_of_avarice">Ring of Avarice</string>
    <string name="ring_of_devout_prayer">Ring of Devout Prayer</string>
    <string name="plague_resistance_ring">Plague Resistance Ring</string>
    <string name="flame_resistance_ring">Flame Resistance Ring</string>
    <string name="gash_resistance_ring">Gash Resistance Ring</string>
    <string name="ring_of_great_strength">Ring of Great Strength</string>
    <string name="ring_of_herculean_strength">Ring of Herculean Strength</string>
    <string name="ring_of_magical_dullness">Ring of Magical Dullness</string>
    <string name="ring_of_magical_nature">Ring of Magical Nature</string>
    <string name="ring_of_magical_sharpness">Ring of Magical Sharpness</string>
    <string name="ring_of_sincere_prayer">Ring of Sincere Prayer</string>
    <string name="ring_of_the_accursed">Ring of the Accursed</string>
    <string name="ronin_s_ring">Ronin\'s Ring</string>
    <string name="thief_ring">Thief Ring</string>
    <string name="ring_of_longevity">Ring of Longevity</string>
    <string name="providential_ring">Providential Ring</string>
    <string name="sodden_ring">Sodden Ring</string>
    <string name="ring_of_uneven_scales">Ring of Uneven Scales</string>
    <string name="picture_of_knight">Picture of Knight</string>
    <string name="saint_s_trophy">Saint\'s Trophy</string>
    <string name="king_of_rings">King of Rings</string>
    <string name="ally_s_ring">Ally\'s Ring</string>
    <string name="poison_resistance_ring">Poison Resistance Ring</string>
</resources>